--- a/jedi-academy/src/app/app.component.html
+++ b/jedi-academy/src/app/app.component.html
@@ -1,5 +1,4 @@
 <jad-header></jad-header>
 
-<jad-student [student]="luke"></jad-student><br/>
-<jad-student [student]="han"></jad-student><br/>
-<jad-student [student]="leia"></jad-student><br/>
+
+<jad-student *ngFor="let student of students" [student]="student"></jad-student><br/>
