Dealing with events

--- a/jedi-academy/src/app/student/student.component.html
+++ b/jedi-academy/src/app/student/student.component.html
@@ -1,5 +1,5 @@
 <div>
-  Student: {{ student.name }}
+  <a href="#" (click)="clicked()">Student: {{ student.name }}</a>
   <div *ngIf="student.isJedi">
     Jedi Temple: {{ student.temple }}
   </div>
